Mykonoshot5.html aktualisieren

--- a/Mykonoshot5.html
+++ b/Mykonoshot5.html
@@ -1,120 +1,30 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mykonos – Menü (PDF-Scroll)</title>
-<meta name="description" content="Gesamtes Menü als eingebettete PDFs – nach unten scrollen.">
-<style>
-  :root{--bg:#fff;--ink:#0a1633;--muted:#6b7280;--brand:#0a4aa4;--surface:#f7f8fb;--border:#e5e9f2;--shadow:0 10px 30px rgba(10,23,54,.08)}
-  *{box-sizing:border-box} html{scroll-behavior:smooth}
-  body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;line-height:1.6}
-  .container{max-width:1100px;margin:0 auto;padding:0 18px}
-  .section{padding:48px 0} .center{text-align:center} .muted{color:var(--muted)}
-  /* Sticky header */
-  .site-header{position:sticky;top:0;z-index:50;background:#fff;border-bottom:1px solid var(--border);box-shadow:0 4px 18px rgba(0,0,0,.04)}
-  .nav{display:flex;align-items:center;justify-content:space-between;padding:10px 0}
-  .brand{display:flex;align-items:center;gap:10px;color:inherit;text-decoration:none}
-  .brand .mark{width:36px;height:36px}
-  .navlinks{display:flex;gap:10px;flex-wrap:wrap}
-  .navlinks a{padding:.45rem .65rem;border-radius:.55rem;color:inherit;text-decoration:none}
-  .navlinks a:hover{background:var(--surface)}
-  /* Greek border for sections */
-  .greek{position:relative;isolation:isolate;border-block:14px solid transparent}
-  .greek::before,.greek::after{content:"";position:absolute;inset-inline:0;height:14px;z-index:-1;
-    background:repeating-linear-gradient(90deg,var(--brand) 0 14px,transparent 14px 16px),
-               repeating-linear-gradient(90deg,var(--brand) 0 2px,transparent 2px 16px)}
-  .greek::before{top:0} .greek::after{bottom:0;transform:scaleY(-1)}
-  /* Cards with embedded PDFs */
-  .menu-stack{display:grid;gap:22px}
-  .card{background:#fff;border:1px solid var(--border);border-radius:16px;overflow:hidden;box-shadow:var(--shadow)}
-  .card h3{margin:0;padding:12px 16px;border-bottom:1px solid var(--border);font-size:1.05rem;background:var(--surface)}
-  .card object{display:block;width:100%;height:90vh;max-height:1000px;border:0}
-  .dl{padding:10px 16px;border-top:1px solid var(--border);background:#fff}
-  .dl a{color:var(--brand);text-decoration:none;font-weight:700}
-  footer{border-top:1px solid var(--border);padding:16px 0;text-align:center;color:var(--muted)}
-</style>
-</head>
-<body>
-
-<header class="site-header">
-  <div class="container nav">
-    <a class="brand" href="index.html">
-      <svg class="mark" viewBox="0 0 64 64" aria-hidden="true">
-        <circle cx="32" cy="32" r="27" fill="none" stroke="#0a4aa4" stroke-width="4"/>
-        <path d="M16 38c7-9 14-12 18-12s11 3 18 12" fill="none" stroke="#0a4aa4" stroke-width="5" stroke-linecap="round"/>
-      </svg>
-      <strong>Mykonos</strong>
-    </a>
-    <nav class="navlinks" id="toc" aria-label="Abschnitte"></nav>
-  </div>
-</header>
-
-<section class="section container greek center">
-  <h1 style="margin:.2rem 0 .4rem">Menü – einfach nach unten scrollen</h1>
-  <p class="muted">Alle Seiten sind als PDF eingebettet. Wenn dein Browser blockiert, nutze „PDF öffnen“.</p>
-</section>
-
-<section id="menu" class="section container">
-  <div class="menu-stack" id="stack"><!-- wird per JS gefüllt --></div>
-</section>
-
-<footer class="center">
-  © <span id="y"></span> Mykonos
-</footer>
-
 <script>
-  document.getElementById('y').textContent=new Date().getFullYear();
-
-  // === HIER NUR DIE DATEINAMEN ANPASSEN (genau wie in assets/menu/) ===
-  // Tipp: öffne PDF in GitHub und kopiere den Namen 1:1 (mit Groß/Kleinschreibung und Umlauten).
   const items = [
-    {id:'salate',            title:'Salate',                               file:'SALATE_FINAL.pdf'},
-    {id:'mykonos',           title:'Mykonos Spezialitäten',                file:'MYKONOS_SPEZIALITÄTEN_FINAL.pdf'},
-    {id:'leber-fisch',       title:'Leber & Fisch-Spezialitäten',          file:'LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf'},
-    {id:'lamm',              title:'Lamm vom Grill',                       file:'LAMM_VOM_GRILL_FINAL_CORRECTED.pdf'},
-    {id:'kinder',            title:'Kinder Teller & Dessert',               file:'KINDER_TELLER_DESSERT_FINAL.pdf'},
-    {id:'ueberbackene',      title:'Überbackene Gerichte',                 file:'UEBERBACKENE_GERICHTE_FINAL.pdf'},
-    {id:'grillplatten',      title:'Grillplatten',                         file:'GRILLPLATTEN_FINAL_CORRECTED.pdf'},
-    {id:'grillspez',         title:'Grillspezialitäten',                   file:'GRILLSPEZIALITÄTEN_FINAL.pdf'},
-    {id:'eier-gemuese-nudel',title:'Eier · Gemüse · Nudel',                file:'EIER_GEMUSE_NUDEL_Visualisierung_FINAL.pdf'}, // ← ändere auf deinen genauen Namen
-    {id:'feinschmecker',     title:'Feinschmecker Ecke',                   file:'FEINSCHMECKER_ECKE_FINAL.pdf'},
-    {id:'vorspeisen-suppen', title:'Vorspeisen · Warme Suppen',            file:'Vorspeisen_Warme_Suppen_FINAL.pdf'},
-    {id:'kaese',             title:'Käse',                                 file:'KAESE_MENU_FINAL.pdf'},
-    {id:'weinkarte',         title:'Weinkarte & Aperitifs',                file:'WEINKARTE_UND_APERITIFS.pdf'},
-    {id:'spirituosen',       title:'Spirituosen & Liköre',                 file:'SPIRITUOSEN_UND_LIKOERE.pdf'},
-    {id:'getraenke',         title:'Getränke',                             file:'GETRÄNKE_FINAL.pdf'}, // evtl. GETRAENKE_FINAL.pdf
-    {id:'alkoholische',      title:'Alkoholische Getränke',                file:'A_menu_page_displays_alcoholic_beverages,_divided_.pdf'},
-    {id:'familie',           title:'Unsere Familienangebote',              file:'UNSERE_FAMILIENFREUNDLICH_FINAL.pdf'}, // passe an
-    {id:'hinweis1',          title:'Hinweis (Seite 1)',                    file:'Griechisches_Menu_Seite1_A4.pdf'}, // passe an
-    {id:'hinweis2',          title:'Hinweis (Seite 2)',                    file:'Griechisches_Menu_Seite_AL_A4.pdf'}, // passe an
-    {id:'abschluss',         title:'Abschlussseite / Impressum',           file:'ABSCHLUSSSEITE_MYKONOS.pdf'}
+    {id:'hinweis1',          title:'Hinweis',                            file:'Griechisches_Menu_Seite1_A4.pdf'},
+    {id:'hinweis2',          title:'Hinweis (Seite 2)',                  file:'Griechisches_Menu_Seite_AL_A4.pdf'},
+
+    {id:'salate',            title:'Salate',                             file:'SALATE_FINAL.pdf'},
+    {id:'vorspeisen',        title:'Vorspeisen · Warme Suppen',         file:'Vorspeisen_Warme_Suppen_FINAL.pdf'},
+    {id:'feinschmecker',     title:'Feinschmecker Ecke',                 file:'FEINSCHMECKER_ECKE_FINAL.pdf'},
+
+    {id:'eier-gemuese-nudel',title:'Eier · Gemüse · Nudel',              file:'EIER_GEMUSE_NUDEL_Visualisierung_FINAL.pdf'},  // ако при теб е без „Visualisierung“, смени името
+
+    {id:'mykonos',           title:'Mykonos Spezialitäten',              file:'MYKONOS_SPEZIALITÄTEN_FINAL.pdf'},
+    {id:'grillspez',         title:'Grillspezialitäten',                 file:'GRILLSPEZIALITÄTEN_FINAL.pdf'},
+    {id:'grillplatten',      title:'Grillplatten',                       file:'GRILLPLATTEN_FINAL_CORRECTED.pdf'},
+    {id:'lamm',              title:'Lamm vom Grill',                     file:'LAMM_VOM_GRILL_FINAL_CORRECTED.pdf'},
+    {id:'leber-fisch',       title:'Leber & Fisch-Spezialitäten',        file:'LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf'},
+
+    {id:'ueberbacken',       title:'Überbackene Gerichte',               file:'UEBERBACKENE_GERICHTE_FINAL.pdf'},
+    {id:'kinder',            title:'Kinder Teller & Dessert',            file:'KINDER_TELLER_DESSERT_FINAL.pdf'},
+    {id:'kaese',             title:'Käse',                               file:'KAESE_MENU_FINAL.pdf'},
+
+    {id:'getraenke',         title:'Getränke',                           file:'GETRÄNKE_FINAL.pdf'},        // ако при теб е GETRAENKE_FINAL.pdf – смени точно
+    {id:'spirituosen',       title:'Spirituosen & Liköre',               file:'SPIRITUOSEN_UND_LIKOERE.pdf'},
+    {id:'alkoholische',      title:'Alkoholische Getränke',              file:'A_menu_page_displays_alcoholic_beverages,_divided_.pdf'},
+    {id:'weinkarte',         title:'Weinkarte & Aperitifs',              file:'WEINKARTE_UND_APERITIFS.pdf'},
+
+    {id:'familie',           title:'Unsere Familienangebote',            file:'UNSERE_FAMILIENFREUNDLICH_FINAL.pdf'}, // ако е друго, смени
+    {id:'abschluss',         title:'Abschlussseite / Dankeschön',        file:'ABSCHLUSSSEITE_MYKONOS.pdf'},
   ];
-  // === Ende der Liste ===
-
-  // Build TOC
-  const toc = document.getElementById('toc');
-  items.forEach(it=>{
-    const a=document.createElement('a');
-    a.href='#'+it.id; a.textContent=it.title;
-    toc.appendChild(a);
-  });
-
-  // Build cards
-  const stack = document.getElementById('stack');
-  items.forEach(it=>{
-    const card = document.createElement('article');
-    card.className='card'; card.id=it.id;
-    card.innerHTML = `
-      <h3>${it.title}</h3>
-      <object data="assets/menu/${it.file}" type="application/pdf">
-        <p>PDF nicht angezeigt. <a href="assets/menu/${it.file}" target="_blank" rel="noopener">PDF öffnen</a>.</p>
-      </object>
-      <div class="dl"><a href="assets/menu/${it.file}" download>PDF herunterladen</a></div>
-    `;
-    stack.appendChild(card);
-  });
 </script>
-</body>
-</html>
-
