--- a/Mykonoshot5.html
+++ b/Mykonoshot5.html
@@ -1,30 +1,139 @@
-<script>
-  const items = [
-    {id:'hinweis1',          title:'Hinweis',                            file:'Griechisches_Menu_Seite1_A4.pdf'},
-    {id:'hinweis2',          title:'Hinweis (Seite 2)',                  file:'Griechisches_Menu_Seite_AL_A4.pdf'},
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Mykonos – Menü</title>
+<style>
+  :root{--brand:#0a4aa4;--border:#e5e9f2;--muted:#6b7280}
+  *{box-sizing:border-box} html{scroll-behavior:smooth}
+  body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#0a1633;background:#fff}
+  .container{max-width:1100px;margin:0 auto;padding:0 16px}
+  .section{padding:20px 0}
+  .title{padding:24px 0 8px;text-align:center;color:#0a1633}
+  .note{color:var(--muted);text-align:center;margin:0 0 10px}
+  /* карта за всеки PDF */
+  .card{border:1px solid var(--border);border-radius:14px;overflow:hidden;margin:16px 0}
+  .card h3{margin:0;padding:10px 14px;border-bottom:1px solid var(--border);background:#f7f8fb;font-size:1rem}
+  .card object{display:block;width:100%;height:90vh;max-height:1000px;border:0}
+  .dl{padding:10px 14px;border-top:1px solid var(--border)}
+  .dl a{color:var(--brand);font-weight:700;text-decoration:none}
+  footer{border-top:1px solid var(--border);padding:14px 0;text-align:center;color:var(--muted)}
+</style>
+</head>
+<body>
 
-    {id:'salate',            title:'Salate',                             file:'SALATE_FINAL.pdf'},
-    {id:'vorspeisen',        title:'Vorspeisen · Warme Suppen',         file:'Vorspeisen_Warme_Suppen_FINAL.pdf'},
-    {id:'feinschmecker',     title:'Feinschmecker Ecke',                 file:'FEINSCHMECKER_ECKE_FINAL.pdf'},
+<main class="container section">
+  <h1 class="title">Menü – scrollen</h1>
+  <p class="note">Alle Seiten sind als PDF eingebettet.</p>
 
-    {id:'eier-gemuese-nudel',title:'Eier · Gemüse · Nudel',              file:'EIER_GEMUSE_NUDEL_Visualisierung_FINAL.pdf'},  // ако при теб е без „Visualisierung“, смени името
+  <!-- !!! НИЩО ДРУГО – само PDF-и един под друг -->
 
-    {id:'mykonos',           title:'Mykonos Spezialitäten',              file:'MYKONOS_SPEZIALITÄTEN_FINAL.pdf'},
-    {id:'grillspez',         title:'Grillspezialitäten',                 file:'GRILLSPEZIALITÄTEN_FINAL.pdf'},
-    {id:'grillplatten',      title:'Grillplatten',                       file:'GRILLPLATTEN_FINAL_CORRECTED.pdf'},
-    {id:'lamm',              title:'Lamm vom Grill',                     file:'LAMM_VOM_GRILL_FINAL_CORRECTED.pdf'},
-    {id:'leber-fisch',       title:'Leber & Fisch-Spezialitäten',        file:'LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf'},
+  <article class="card"><h3>Salate</h3>
+    <object data="assets/menu/SALATE_FINAL.pdf" type="application/pdf">
+      <p>PDF öffnen: <a href="assets/menu/SALATE_FINAL.pdf" target="_blank" rel="noopener">hier</a></p>
+    </object>
+    <div class="dl"><a href="assets/menu/SALATE_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
 
-    {id:'ueberbacken',       title:'Überbackene Gerichte',               file:'UEBERBACKENE_GERICHTE_FINAL.pdf'},
-    {id:'kinder',            title:'Kinder Teller & Dessert',            file:'KINDER_TELLER_DESSERT_FINAL.pdf'},
-    {id:'kaese',             title:'Käse',                               file:'KAESE_MENU_FINAL.pdf'},
+  <article class="card"><h3>Mykonos Spezialitäten</h3>
+    <object data="assets/menu/MYKONOS_SPEZIALITÄTEN_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/MYKONOS_SPEZIALITÄTEN_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
 
-    {id:'getraenke',         title:'Getränke',                           file:'GETRÄNKE_FINAL.pdf'},        // ако при теб е GETRAENKE_FINAL.pdf – смени точно
-    {id:'spirituosen',       title:'Spirituosen & Liköre',               file:'SPIRITUOSEN_UND_LIKOERE.pdf'},
-    {id:'alkoholische',      title:'Alkoholische Getränke',              file:'A_menu_page_displays_alcoholic_beverages,_divided_.pdf'},
-    {id:'weinkarte',         title:'Weinkarte & Aperitifs',              file:'WEINKARTE_UND_APERITIFS.pdf'},
+  <article class="card"><h3>Leber & Fisch-Spezialitäten</h3>
+    <object data="assets/menu/LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
 
-    {id:'familie',           title:'Unsere Familienangebote',            file:'UNSERE_FAMILIENFREUNDLICH_FINAL.pdf'}, // ако е друго, смени
-    {id:'abschluss',         title:'Abschlussseite / Dankeschön',        file:'ABSCHLUSSSEITE_MYKONOS.pdf'},
-  ];
-</script>
+  <article class="card"><h3>Lamm vom Grill</h3>
+    <object data="assets/menu/LAMM_VOM_GRILL_FINAL_CORRECTED.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/LAMM_VOM_GRILL_FINAL_CORRECTED.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Kinder Teller & Dessert</h3>
+    <object data="assets/menu/KINDER_TELLER_DESSERT_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/KINDER_TELLER_DESSERT_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Überbackene Gerichte</h3>
+    <object data="assets/menu/UEBERBACKENE_GERICHTE_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/UEBERBACKENE_GERICHTE_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Grillplatten</h3>
+    <object data="assets/menu/GRILLPLATTEN_FINAL_CORRECTED.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/GRILLPLATTEN_FINAL_CORRECTED.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Grillspezialitäten</h3>
+    <object data="assets/menu/GRILLSPEZIALITÄTEN_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/GRILLSPEZIALITÄTEN_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Eier · Gemüse · Nudel</h3>
+    <object data="assets/menu/EIER_GEMUSE_NUDEL_Visualisierung_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/EIER_GEMUSE_NUDEL_Visualisierung_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Feinschmecker Ecke</h3>
+    <object data="assets/menu/FEINSCHMECKER_ECKE_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/FEINSCHMECKER_ECKE_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Vorspeisen · Warme Suppen</h3>
+    <object data="assets/menu/Vorspeisen_Warme_Suppen_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/Vorspeisen_Warme_Suppen_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Käse</h3>
+    <object data="assets/menu/KAESE_MENU_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/KAESE_MENU_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Weinkarte & Aperitifs</h3>
+    <object data="assets/menu/WEINKARTE_UND_APERITIFS.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/WEINKARTE_UND_APERITIFS.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Spirituosen & Liköre</h3>
+    <object data="assets/menu/SPIRITUOSEN_UND_LIKOERE.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/SPIRITUOSEN_UND_LIKOERE.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Getränke</h3>
+    <object data="assets/menu/GETRÄNKE_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/GETRÄNKE_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Alkoholische Getränke</h3>
+    <object data="assets/menu/A_menu_page_displays_alcoholic_beverages,_divided_.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/A_menu_page_displays_alcoholic_beverages,_divided_.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Unsere Familienangebote</h3>
+    <object data="assets/menu/UNSERE_FAMILIENFREUNDLICH_FINAL.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/UNSERE_FAMILIENFREUNDLICH_FINAL.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Hinweis (Seite 1)</h3>
+    <object data="assets/menu/Griechisches_Menu_Seite1_A4.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/Griechisches_Menu_Seite1_A4.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Hinweis (Seite 2)</h3>
+    <object data="assets/menu/Griechisches_Menu_Seite_AL_A4.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/Griechisches_Menu_Seite_AL_A4.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+  <article class="card"><h3>Abschlussseite / Impressum</h3>
+    <object data="assets/menu/ABSCHLUSSSEITE_MYKONOS.pdf" type="application/pdf"></object>
+    <div class="dl"><a href="assets/menu/ABSCHLUSSSEITE_MYKONOS.pdf" download>PDF herunterladen</a></div>
+  </article>
+
+</main>
+
+<footer>© <span id="y"></span> Mykonos</footer>
+<script>document.getElementById('y').textContent=new Date().getFullYear();</script>
+</body>
+</html>
