--- a/Mykonoshot5.html
+++ b/Mykonoshot5.html
@@ -10,12 +10,11 @@
   body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;color:#0a1633;background:#fff}
   .container{max-width:1100px;margin:0 auto;padding:0 16px}
   .section{padding:20px 0}
-  .title{padding:24px 0 8px;text-align:center;color:#0a1633}
+  .title{padding:24px 0 8px;text-align:center}
   .note{color:var(--muted);text-align:center;margin:0 0 10px}
-  /* карта за всеки PDF */
   .card{border:1px solid var(--border);border-radius:14px;overflow:hidden;margin:16px 0}
   .card h3{margin:0;padding:10px 14px;border-bottom:1px solid var(--border);background:#f7f8fb;font-size:1rem}
-  .card object{display:block;width:100%;height:90vh;max-height:1000px;border:0}
+  .pdf-frame{display:block;width:100%;height:90vh;max-height:1000px;border:0}
   .dl{padding:10px 14px;border-top:1px solid var(--border)}
   .dl a{color:var(--brand);font-weight:700;text-decoration:none}
   footer{border-top:1px solid var(--border);padding:14px 0;text-align:center;color:var(--muted)}
@@ -27,107 +26,103 @@
   <h1 class="title">Menü – scrollen</h1>
   <p class="note">Alle Seiten sind als PDF eingebettet.</p>
 
-  <!-- !!! НИЩО ДРУГО – само PDF-и един под друг -->
-
   <article class="card"><h3>Salate</h3>
-    <object data="assets/menu/SALATE_FINAL.pdf" type="application/pdf">
-      <p>PDF öffnen: <a href="assets/menu/SALATE_FINAL.pdf" target="_blank" rel="noopener">hier</a></p>
-    </object>
+    <iframe class="pdf-frame" src="assets/menu/SALATE_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/SALATE_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Mykonos Spezialitäten</h3>
-    <object data="assets/menu/MYKONOS_SPEZIALITÄTEN_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/MYKONOS_SPEZIALITÄTEN_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/MYKONOS_SPEZIALITÄTEN_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Leber & Fisch-Spezialitäten</h3>
-    <object data="assets/menu/LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/LEBER_UND_FISCH_SPEZIALITÄTEN_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Lamm vom Grill</h3>
-    <object data="assets/menu/LAMM_VOM_GRILL_FINAL_CORRECTED.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/LAMM_VOM_GRILL_FINAL_CORRECTED.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/LAMM_VOM_GRILL_FINAL_CORRECTED.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Kinder Teller & Dessert</h3>
-    <object data="assets/menu/KINDER_TELLER_DESSERT_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/KINDER_TELLER_DESSERT_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/KINDER_TELLER_DESSERT_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Überbackene Gerichte</h3>
-    <object data="assets/menu/UEBERBACKENE_GERICHTE_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/UEBERBACKENE_GERICHTE_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/UEBERBACKENE_GERICHTE_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Grillplatten</h3>
-    <object data="assets/menu/GRILLPLATTEN_FINAL_CORRECTED.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/GRILLPLATTEN_FINAL_CORRECTED.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/GRILLPLATTEN_FINAL_CORRECTED.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Grillspezialitäten</h3>
-    <object data="assets/menu/GRILLSPEZIALITÄTEN_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/GRILLSPEZIALITÄTEN_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/GRILLSPEZIALITÄTEN_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Eier · Gemüse · Nudel</h3>
-    <object data="assets/menu/EIER_GEMUSE_NUDEL_Visualisierung_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/EIER_GEMUSE_NUDEL_Visualisierung_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/EIER_GEMUSE_NUDEL_Visualisierung_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Feinschmecker Ecke</h3>
-    <object data="assets/menu/FEINSCHMECKER_ECKE_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/FEINSCHMECKER_ECKE_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/FEINSCHMECKER_ECKE_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Vorspeisen · Warme Suppen</h3>
-    <object data="assets/menu/Vorspeisen_Warme_Suppen_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/Vorspeisen_Warme_Suppen_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/Vorspeisen_Warme_Suppen_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Käse</h3>
-    <object data="assets/menu/KAESE_MENU_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/KAESE_MENU_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/KAESE_MENU_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Weinkarte & Aperitifs</h3>
-    <object data="assets/menu/WEINKARTE_UND_APERITIFS.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/WEINKARTE_UND_APERITIFS.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/WEINKARTE_UND_APERITIFS.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Spirituosen & Liköre</h3>
-    <object data="assets/menu/SPIRITUOSEN_UND_LIKOERE.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/SPIRITUOSEN_UND_LIKOERE.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/SPIRITUOSEN_UND_LIKOERE.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Getränke</h3>
-    <object data="assets/menu/GETRÄNKE_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/GETRÄNKE_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/GETRÄNKE_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Alkoholische Getränke</h3>
-    <object data="assets/menu/A_menu_page_displays_alcoholic_beverages,_divided_.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/A_menu_page_displays_alcoholic_beverages,_divided_.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/A_menu_page_displays_alcoholic_beverages,_divided_.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Unsere Familienangebote</h3>
-    <object data="assets/menu/UNSERE_FAMILIENFREUNDLICH_FINAL.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/UNSERE_FAMILIENFREUNDLICH_FINAL.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/UNSERE_FAMILIENFREUNDLICH_FINAL.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Hinweis (Seite 1)</h3>
-    <object data="assets/menu/Griechisches_Menu_Seite1_A4.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/Griechisches_Menu_Seite1_A4.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/Griechisches_Menu_Seite1_A4.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Hinweis (Seite 2)</h3>
-    <object data="assets/menu/Griechisches_Menu_Seite_AL_A4.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/Griechisches_Menu_Seite_AL_A4.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/Griechisches_Menu_Seite_AL_A4.pdf" download>PDF herunterladen</a></div>
   </article>
 
   <article class="card"><h3>Abschlussseite / Impressum</h3>
-    <object data="assets/menu/ABSCHLUSSSEITE_MYKONOS.pdf" type="application/pdf"></object>
+    <iframe class="pdf-frame" src="assets/menu/ABSCHLUSSSEITE_MYKONOS.pdf#view=FitH&toolbar=0"></iframe>
     <div class="dl"><a href="assets/menu/ABSCHLUSSSEITE_MYKONOS.pdf" download>PDF herunterladen</a></div>
   </article>
 
